SFDC Automation/src/objects/BTR_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage_Tier__c</fullName>
        <label>Mileage Tier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAM_Class__c</fullName>
        <label>SAM Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Proceeds__c</fullName>
        <label>Sales Proceeds</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Age__c</fullName>
        <label>Selling Age</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit Count</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BTR Stats</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Is_Current_Inventory__c</columns>
        <columns>Make__c</columns>
        <columns>Mileage_Tier__c</columns>
        <columns>Model__c</columns>
        <columns>Sales_Proceeds__c</columns>
        <columns>SAM_Class__c</columns>
        <columns>Selling_Age__c</columns>
        <columns>Unit_Count__c</columns>
        <columns>Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_Inventory__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2006</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BTRS-{00000000}</displayFormat>
        <label>BTR Stats Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BTR Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>